[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redbee-mcp"
version = "2.0.0"
description = "Model Context Protocol server for Red Bee Media OTT Platform"
authors = [
    {name = "Red Bee Media MCP", email = "support@redbee.live"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.0",
]

[project.scripts]
redbee-mcp = "redbee_mcp.server:main"

[project.urls]
Homepage = "https://redbee.live"
Documentation = "https://redbee.live/docs/API/"
Repository = "https://github.com/redbee-media/redbee-mcp"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src" 