[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redbee-mcp"
version = "1.0.0"
description = "Model Context Protocol server for Red Bee Media OTT Platform"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Red Bee MCP Team", email = "mcp@redbee.com"}
]
keywords = ["mcp", "redbee", "streaming", "ott"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "aiohttp>=3.8.0",
]

[project.urls]
Homepage = "https://github.com/votre-username/redbee-MCP"
Repository = "https://github.com/votre-username/redbee-MCP"
Issues = "https://github.com/votre-username/redbee-MCP/issues"

[project.scripts]
redbee-mcp = "redbee_mcp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src" 